_sass/minima/_layout.sass
body
  background-color: $dark-bg
  letter-spacing: 0.3px
  line-height: 1.3em
.home
  padding-top: 30px

.site-header
  font-family: $titles-font
  min-height: 0
  text-transform: lowercase
  +relative-font-size(1.6)

  .site-logo
    z-index: 99
    img
      max-width: 200px

  a
    color: $top-nav-links
    &:hover
      text-shadow: -5px 5px $shadow-text, -10px 8px $shadow-tropical

  +media-query($on-palm)
    min-height: 0
    top: 0
    transform: none


.fixed-top
  background: $top-nav-bg
  display: block
  position: fixed
  width: 100%
  z-index: 99

  .main-menu
    align-items: center
    display: flex
    justify-content: space-between
    margin-left: auto
    margin-right: auto
    max-height: 120px
    max-width: calc(1200px - (30px * 2))
    padding: 20px 30px


.sticky
  left: 0
  position: fixed
  right: 0
  top: 0


.site-title
  +relative-font-size(1.8)

  font-weight: 300
  line-height: $base-line-height * $base-font-size * 2.25

  margin-bottom: 0
  +media-query($on-palm)
    color: #f00


.site-footer
  background: $footer-bg
  border-top: 1px solid $grey-color-light
  padding: $spacing-unit 0
  a
    color:  $light-headings

.footer-heading
  +relative-font-size(1.125)
  color: $light-headings
  margin-bottom: $spacing-unit / 2

.contact-list,
.social-media-list
  list-style: none
  margin-left: 0

.footer-col-wrapper
  +relative-font-size(0.9375)
  align-items: center
  color:  $light-headings
  display: flex
  font-family: $titles-font
  justify-content: space-between

  margin-left: -$spacing-unit / 2
  text-align: center

  @extend %clearfix

  .footer-col-2
    p
      max-width: 300px


+media-query($on-laptop)
  .footer-col-1,
  .footer-col-2
    width: -webkit-calc(50% - (#{$spacing-unit} / 2))
    width: calc(50% - (#{$spacing-unit} / 2))

  .footer-col-3
    width: -webkit-calc(100% - (#{$spacing-unit} / 2))
    width: calc(100% - (#{$spacing-unit} / 2))


+media-query($on-palm)
  .footer-col
    float: none
    width: -webkit-calc(100% - (#{$spacing-unit} / 2))
    width: calc(100% - (#{$spacing-unit} / 2))

.footer-logo
  max-width: 150px
  padding: 20px

//All pages content

.page-content
  background-attachment: fixed
  background-image: url('/assets/banner.png')
  background-position: bottom left
  background-repeat: no-repeat
  flex: 1
  margin-top: 140px
  min-height: 720px

.page-heading
  +relative-font-size(2)

.page-highlight
  background: $text-color
  color: $grey-color-light
  padding: 20px

.post-list-heading
  +relative-font-size(2)
  color: $light-headings
  letter-spacing: 1px
  line-height: 1.3em
  text-align: right
  text-shadow: 1px 1px 2px #ef0f38

  +media-query($on-palm)
    +relative-font-size(2)
    margin-top: 20px

.section-title
  +relative-font-size(2)
  color: $light-headings
  letter-spacing: 1px
  line-height: 1.3em
  text-align: left
  text-shadow: 1px 1px 2px #ef0f38
  margin-top: 20px

  +media-query($on-palm)
    +relative-font-size(2)

.section-title-right
  +relative-font-size(2)
  color: $light-headings
  letter-spacing: 1px
  line-height: 1.3em
  text-align: right
  text-shadow: 1px 1px 2px #ef0f38
  margin-top: 20px

  +media-query($on-palm)
    +relative-font-size(2)

.issues
  display:block

.post-list-stories
  background-color: $pure-white
  padding: 40px
  display: grid
  grid-gap: 50px
  grid-template-columns: 40% 40%
  list-style: none
  margin-left: 0

  +media-query($on-palm)
    grid-gap: 10px
    grid-template-columns: none
    grid-template-rows: none

.post-list
  display: grid
  grid-gap: 50px
  grid-template-columns: 30% 30% 30%
  list-style: none
  margin-left: 0

  +media-query($on-palm)
    grid-gap: 10px
    grid-template-columns: none
    grid-template-rows: none

.post-meta
  color: $grey-color
  font-size: $small-font-size

.post-link
  display: block
  span
    background-color: #000
    padding: 4px

  +relative-font-size(1.5)

.post-title
  +relative-font-size(2.625)
  letter-spacing: -1px
  line-height: 1

  +media-query($on-laptop)
    +relative-font-size(2.25)

.post-content
  margin-bottom: $spacing-unit

  h2
    +relative-font-size(2)
    margin-top: 30px

    +media-query($on-laptop)
      +relative-font-size(1.75)

  h3
    +relative-font-size(1.625)

    +media-query($on-laptop)
      +relative-font-size(1.375)

  h4
    +relative-font-size(1.25)

    +media-query($on-laptop)
      +relative-font-size(1.125)

  ul
    margin-bottom: 0

